2007-09-28 [paul]	3.0.1cvs44

	* src/mimeview.c
		fix maemo build

2007-09-28 [paul]	3.0.1cvs43

	* src/account.c
		use gtk_widget_set_size_request() on the label
		so that wrapping works better. get rid of the
		(partially deprecated) hbutton_box.
		these changes should prevent buttons overlapping
		on maemo

2007-09-28 [colin]	3.0.1cvs42

	* src/pop.c
		Fix typo :)

2007-09-28 [colin]	3.0.1cvs41

	* src/compose.c
	* src/msgcache.c
	* src/pop.c
	* src/procmime.c
	* src/etpan/imap-thread.c
		64bits-related warning fixes

2007-09-28 [colin]	3.0.1cvs40

	* src/folder_item_prefs.c
	* src/ldaputil.c
	* src/mainwindow.c
	* src/mimeview.c
	* src/common/tags.c
		Fix warnings

2007-09-28 [colin]	3.0.1cvs39

	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		Add addressbook-based whitelisting

2007-09-28 [colin]	3.0.1cvs38

	* src/folder.c
		Fix bug 1337, 'crash on pressing Send button'

2007-09-28 [paul]	3.0.1cvs37

	* src/prefs_folder_item.c
		give the orphans a parent. makes all prefs
		pages visible on maemo

2007-09-28 [colin]	3.0.1cvs36

	* src/prefs_folder_column.c
	* src/prefs_summary_column.c
		Fix two leaks

2007-09-27 [colin]	3.0.1cvs35

	* src/gtk/quicksearch.c
		Fix bug 1336, 'Segfault if empty space before search-string'

2007-09-26 [mones]	3.0.1cvs34

	* manual/account.xml
	* manual/plugins.xml
		Fixed irc channel name, added some docbook markup.
		Changed text markup to docbook markup. 
		Added spamcop as supported in SpamReport description.
	* manual/fr/plugins.xml
		Fixed irc channel name.
	* manual/es/account.xml
	* manual/es/advanced.xml
	* manual/es/claws-mail-manual.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/keyboard.xml
	* manual/es/plugins.xml
		Synced with English version, fixed a couple of typos.

2007-09-26 [colin]	3.0.1cvs33

	* configure.ac
		Explain why "Libgnomeprint: no" on GTK+ 2.10

2007-09-26 [colin]	3.0.1cvs32

	* src/messageview.c