@@ -2908,3 +2908,4 @@
 ( cvs diff -u -r 1.56.2.55 -r 1.56.2.56 src/pop.c;  ) > 3.0.1cvs42.patchset
 ( cvs diff -u -r 1.61.2.69 -r 1.61.2.70 src/account.c;  ) > 3.0.1cvs43.patchset
 ( cvs diff -u -r 1.83.2.116 -r 1.83.2.117 src/mimeview.c;  ) > 3.0.1cvs44.patchset
+( cvs diff -u -r 1.60.2.97 -r 1.60.2.98 src/addressbook.c;  cvs diff -u -r 1.28.2.30 -r 1.28.2.31 src/addrindex.c;  ) > 3.0.1cvs45.patchset
