@@ -1,3 +1,9 @@
+2007-09-28 [colin]	3.0.1cvs45
+
+	* src/addressbook.c
+	* src/addrindex.c
+		Fix warnings
+
 2007-09-28 [paul]	3.0.1cvs44
 
 	* src/mimeview.c
